# condor

./: .gitignore  Makefile  TODO.md  docker-compose.yaml  pyproject.toml
condor/: stats.py  telemetry.py
condor/backends/: __init__.py  base.py  onnx_backend.py  openvino_backend.py  tensorrt_backend.py
condor/config/: settings.py
condor/model_manager/: __init__.py  manager.py  shared.py
condor/post_process/: __init__.py  base.py  yolov10.py
condor/server/: __init__.py  main.py  zmq_handler.py
condor/tui/: app.py  art.py
config/: config.yaml
config/examples/: onnx-cpu.yaml  onnx-cuda.yaml  onnx-openvino-ep.yaml  openvino.yaml  tensorrt.yaml
docker/onnxruntime/: Dockerfile  docker-compose.yaml
docker/onnxruntime-cuda/: Dockerfile  docker-compose.yaml
docker/openvino/: Dockerfile  docker-compose.yaml
docker/tensorrt/: Dockerfile  docker-compose.yaml
docs/requirements/: CONCURRENCY_FIX.md  INITIAL_REQUIREMENTS.md  MULTI_WORKER_PROPOSAL.md  OBSERVABILITY.md  REMOTE_DETECTOR_PROTO.md  TENSORRT.md  model_postprocessing.md
scripts/: test_client.py
tests/: test_protocol.py
