[project]
name = "condor"
version = "0.1.0"
description = "Async Frigate ZMQ remote object detector server"
requires-python = ">=3.12, <3.13"
dependencies = [
    "pyzmq>=26.0",
    "aiofiles>=24.0",
    "numpy>=2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "onnxruntime>=1.19",
    "opencv-python-headless>=4.10",
    # Observability — API is zero-overhead when no SDK provider is configured.
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
]

[project.optional-dependencies]
# Native OpenVINO backend (provider: "openvino").
# Install with: uv sync --extra openvino
openvino = [
    "openvino>=2024.0",
]
# Lightweight local metrics: Prometheus scrape endpoint (no database needed).
# Install with: uv sync --extra observability-local
# Then set observability.mode: "prometheus" in config.yaml.
observability-local = [
    "opentelemetry-exporter-prometheus>=0.48b0",
    "prometheus-client>=0.21",
]
# Full OTLP export to HyperDX, Grafana Tempo, Jaeger, etc.
# Install with: uv sync --extra observability-otlp
# Then set observability.mode: "otlp" in config.yaml.
observability-otlp = [
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
condor = "condor.server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["condor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
